# spp_in_out

./: CMakeLists.txt  README.md  memmap_custom.ld  ringqueue.c  spp_in_out.c
include/: btstack_config.h  ringqueue.h
